[package]
name = "crabnews"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
futures = "0.3.19"
reqwest = "0.11.7"
rss = "2.0.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
